# rag_recipes

./: .gitignore  README.md  pyproject.toml
archive/: generation.py  indexing.py
archive/executed_commands/: cmds.sh  end_to_end.sh
configs/: default.yaml  ingestbench.yaml  ingestbench_dense.yaml  ingestbench_ensemble.yaml  ingestbench_sparse.yaml
src/: __init__.py  cli.py  config_utils.py  generation.py  indexing.py  retrieval.py  utils.py
tasks/example/: custom_functions.py
tasks/ingestbench/: cmds.sh  custom_functions.py  submit_cmds.sh
